--- a/followers.html
+++ b/followers.html
@@ -19,8 +19,8 @@
 </head>
 
 <body class="antialiased font-confortaa">
-  <header class="-translate-x-1/2 bg-white fixed left-1/2 mx-auto transform w-screen z-50">
-    <div class="flex justify-around p-4 shadow-lg h-20 items-center">
+  <header class="bg-white fixed mx-auto w-screen z-50 shadow-lg">
+    <div class="flex justify-between nav-header p-4 h-20 items-center  mx-auto pr-8">
       <img src="assets/images/logo.svg" alt="logo" class="w-36 h-8" />
       <div class="hidden sm:flex divide-x-2 divide-gray-300 p-2 rounded-full bg-gray-200 gap-4">
         <input type="text" class="px-2 py-1 bg-gray-200 outline-none w-64" placeholder="Find accounts" />
