--- a/getcoin.html
+++ b/getcoin.html
@@ -15,7 +15,7 @@
   <script src="assets/js/jquery-3.6.0.js"></script>
   <script src="assets/js/app.js"></script>
   <script src="assets/js/common.js"></script>
-
+  <script src="assets/js/getcoin.js"></script>
   <title>SwipSwop</title>
 </head>
 
@@ -106,49 +106,49 @@
             <span class="text-sm">Recharge coins to send gifts to LIVE hosts. (Based on Credits)</span>
           </div>
           <div class="grid grod-cols-2 sm:grid-cols-3 md:grid-cols-4 pt-8 gap-2 px-8">
-            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+            <div class="package flex flex-col py-4 border rounded-md justify-center items-center gap-2">
               <div class="flex items-center gap-2">
                 <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
                 <span class="text-xl font-bold">750</span>
               </div>
               <span class="text-sm">€ 9.99</span>
             </div>
-            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+            <div class="package flex flex-col py-4 border rounded-md justify-center items-center gap-2">
               <div class="flex items-center gap-2">
                 <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
                 <span class="text-xl font-bold">2300</span>
               </div>
               <span class="text-sm">€ 29.99</span>
             </div>
-            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+            <div class="package flex flex-col py-4 border rounded-md justify-center items-center gap-2">
               <div class="flex items-center gap-2">
                 <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
                 <span class="text-xl font-bold">5000</span>
               </div>
               <span class="text-sm">€ 59.99</span>
             </div>
-            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+            <div class="package flex flex-col py-4 border rounded-md justify-center items-center gap-2">
               <div class="flex items-center gap-2">
                 <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
                 <span class="text-xl font-bold">14,000</span>
               </div>
               <span class="text-sm">€ 149.99</span>
             </div>
-            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+            <div class="package flex flex-col py-4 border rounded-md justify-center items-center gap-2">
               <div class="flex items-center gap-2">
                 <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
                 <span class="text-xl font-bold">30,000</span>
               </div>
               <span class="text-sm">€ 299,99</span>
             </div>
-            <div class="flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+            <div class="package flex flex-col py-4 border rounded-md justify-center items-center gap-2">
               <div class="flex items-center gap-2">
                 <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
                 <span class="text-xl font-bold">1</span>
               </div>
               <span class="text-sm">€ 0,014</span>
             </div>
-            <div class="gird col-span-2 flex flex-col py-4 border rounded-md justify-center items-center gap-2">
+            <div class="package gird col-span-2 flex flex-col py-4 border rounded-md justify-center items-center gap-2">
               <div class="flex items-center gap-2">
                 <img src="assets/images/icons/ic_coin.svg" alt="coin icon" />
                 <span class="text-xl font-bold">Set Own Value</span>
@@ -159,7 +159,7 @@
           <span class="text-sm text-red-500 font-bold sm:hidden px-8 mt-6">View transaction history</span>
           <div class="fixed sm:relative bottom-0 left-0 right-0 w-full py-4 sm:flex flex-col gap-4 mt-8 px-8 border-t sm:border-0 border-black">
             <p class="text-sm flex justify-between sm:justify-start">Total: <span class="font-bold text-md">€ 0.79</span></p>
-            <button class="px-8 py-2 bg-red-500 rounded-md text-white font-bold w-full sm:w-max">Pay now</button>
+            <a class="px-8 py-2 bg-red-500 rounded-md text-white font-bold w-full sm:w-max" href="payment.html">Pay now</a>
           </div>
         </div>
       </div>
