--- a/chat.html
+++ b/chat.html
@@ -116,30 +116,30 @@
             </div>
             <div class="menu-attach absolute bg-white shadow-lg p-6 rounded-md bottom-20 mx-8 left-0 right-0 hidden">
               <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-2">
-                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                <button class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
                   <img src="assets/images/icons/ic_camera.svg" alt="camera" />
                   <span class="text-sm">Camera</span>
-                </div>
-                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                </button>
+                <button class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
                   <img src="assets/images/icons/ic_file_picture.svg" alt="camera" />
                   <span class="text-sm">Photos</span>
-                </div>
-                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                </button>
+                <button class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
                   <img src="assets/images/icons/ic_file_video.svg" alt="camera" />
                   <span class="text-sm">Videos</span>
-                </div>
-                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                </button>
+                <button class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
                   <img src="assets/images/icons/ic_file_file.svg" alt="camera" />
                   <span class="text-sm">Document</span>
-                </div>
-                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                </button>
+                <button class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
                   <img src="assets/images/icons/ic_location.svg" alt="camera" />
                   <span class="text-sm">Location</span>
-                </div>
-                <div class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
+                </button>
+                <button class="flex items-center jusitfy-center py-4 flex-col border gap-2 px-6">
                   <img src="assets/images/icons/ic_contact.svg" alt="camera" />
                   <span class="text-sm">Contact</span>
-                </div>
+                </button>
               </div>
             </div>
 
